Añado el jframe de loginSesion

--- a/src/presentacion/PresentacionCuentaAhorro.form
+++ b/src/presentacion/PresentacionCuentaAhorro.form
@@ -79,6 +79,9 @@
     <Component class="javax.swing.JTextField" name="txtContrase&#xf1;a">
     </Component>
     <Component class="javax.swing.JTextField" name="txtNdeCuenta">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNdeCuentaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblInicioSesion">
       <Properties>
