--- a/src/presentacion/ifrmCuentaAhorro.form
+++ b/src/presentacion/ifrmCuentaAhorro.form
@@ -104,9 +104,9 @@
                   <Component id="lblIcon" min="-2" pref="90" max="-2" attributes="0"/>
                   <EmptySpace pref="98" max="32767" attributes="0"/>
                   <Component id="lblCuentaAhorro" min="-2" pref="360" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
-                  <Component id="lblNotificacion" min="-2" pref="74" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
+                  <Component id="btnNotificacion" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -116,15 +116,15 @@
                   <EmptySpace pref="14" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="lblNotificacion" alignment="0" min="-2" pref="62" max="-2" attributes="0"/>
-                              <Component id="lblCuentaAhorro" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
                           <Component id="lblIcon" min="-2" pref="80" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnNotificacion" min="-2" pref="72" max="-2" attributes="0"/>
+                              <Component id="lblCuentaAhorro" min="-2" pref="41" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -143,9 +143,9 @@
             <Property name="text" type="java.lang.String" value="CUENTA AHORRO"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblNotificacion">
-        </Component>
         <Component class="javax.swing.JLabel" name="lblIcon">
+        </Component>
+        <Component class="javax.swing.JButton" name="btnNotificacion">
         </Component>
       </SubComponents>
     </Container>
@@ -175,7 +175,7 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblNombres" min="-2" pref="377" max="-2" attributes="0"/>
+                      <Component id="lblNombres" alignment="0" min="-2" pref="377" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
@@ -188,7 +188,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="205" max="32767" attributes="0"/>
+                  <EmptySpace pref="264" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
