--- a/src/presentacion/frmRegistroClienteJuridico.form
+++ b/src/presentacion/frmRegistroClienteJuridico.form
@@ -26,30 +26,50 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
+                      <Component id="lblTitulo" min="-2" pref="215" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
-                              <Component id="lblTitulo" min="-2" pref="215" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lblDireccionOperacion" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="txtDireccionOperacion" min="-2" pref="264" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                              <Component id="lblDireccionFiscal" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="txtDireccionFiscal" min="-2" pref="264" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lblCorreoElectronicoRepresentante" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                                   <Component id="lblTelefonoRepresentante" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
                                   <Component id="lblDireccionRepresentante" alignment="0" min="-2" pref="83" max="-2" attributes="0"/>
                                   <Component id="lblNombreRepresentante" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                                   <Component id="lblApellidoRepresentante" alignment="0" min="-2" pref="97" max="-2" attributes="0"/>
-                                  <Component id="lblDocumentoConstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblCorreoElectronicoJuridico" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblDireccionOperacion" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblTelefonoJuridico" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lblRUC" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lblNombreEmpresa" alignment="0" min="-2" pref="143" max="-2" attributes="0"/>
-                                  <Component id="lblDireccionFiscal" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lblTelefonoJuridico" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="txtTelefonoJuridico" min="-2" pref="264" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lblCorreoElectronicoJuridico" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace pref="13" max="32767" attributes="0"/>
+                              <Component id="txtCorreoElectronicoJuridico1" min="-2" pref="264" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lblDocumentoConstitucion" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="txtDocumentoConstitucion" min="-2" pref="264" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
@@ -58,12 +78,7 @@
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="txtNombreEmpresa" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                                  <Component id="txtDireccionFiscal" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
                                   <Component id="txtRUC" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                                  <Component id="txtTelefonoJuridico" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                                  <Component id="txtDireccionOperacion" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                                  <Component id="txtCorreoElectronicoJuridico1" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                                  <Component id="txtDocumentoConstitucion" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -71,19 +86,15 @@
                                   <Component id="txtCorreoElectronicoRepresentante" alignment="1" min="-2" pref="264" max="-2" attributes="0"/>
                                   <Component id="txtTelefonoRepresentante" alignment="1" min="-2" pref="264" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
-                                      <EmptySpace min="-2" pref="184" max="-2" attributes="0"/>
-                                      <Component id="txtApellidoRepresentante" min="-2" pref="264" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="184" max="-2" attributes="0"/>
-                                      <Component id="txtNombreRepresentate" min="-2" pref="264" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="184" max="-2" attributes="0"/>
-                                      <Component id="txtDireccionRepresentate" min="-2" pref="264" max="-2" attributes="0"/>
+                                      <EmptySpace min="184" pref="184" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="txtApellidoRepresentante" min="-2" pref="264" max="-2" attributes="0"/>
+                                          <Component id="txtNombreRepresentate" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
+                                          <Component id="txtDireccionRepresentate" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="57" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -149,34 +160,29 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="lblTelefonoJuridico" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="lblCorreoElectronicoJuridico" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                      <Component id="lblDocumentoConstitucion" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblCorreoElectronicoJuridico" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCorreoElectronicoJuridico1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblDocumentoConstitucion" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtDocumentoConstitucion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="txtNombreEmpresa" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtRUC" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtDireccionFiscal" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="txtDireccionOperacion" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="32" pref="32" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                              <Component id="txtTelefonoJuridico" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                      <Component id="txtDireccionOperacion" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="txtCorreoElectronicoJuridico1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="txtDocumentoConstitucion" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtTelefonoJuridico" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="16" max="32767" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -228,7 +234,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Telefono Juridico:"/>
+        <Property name="text" type="java.lang.String" value="Telefono Empresarial:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblCorreoElectronicoJuridico">
@@ -236,7 +242,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Correo Electronico Juridico:"/>
+        <Property name="text" type="java.lang.String" value="Correo Electronico Empresarial:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblDocumentoConstitucion">
