--- a/src/presentacion/frmLogin.form
+++ b/src/presentacion/frmLogin.form
@@ -136,6 +136,9 @@
         <Component class="javax.swing.JTextField" name="txtNumeroDeCuenta">
         </Component>
         <Component class="javax.swing.JTextField" name="txtClave">
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtClaveKeyReleased"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnIngresar">
           <Properties>
